// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<Modal
  contentLabel="onboarding.header"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="small"
>
  <div
    className="modal-head"
  >
    <h2>
      onboarding.header
    </h2>
    <p
      className="spacer-top"
    >
      onboarding.header.description
    </p>
  </div>
  <div
    className="modal-body text-center display-flex-row huge-spacer-top huge-spacer-bottom"
  >
    <div
      className="flex-1"
    >
      <OnboardingProjectIcon
        className="big-spacer-bottom"
      />
      <h3
        className="big-spacer-bottom"
      >
        onboarding.analyze_your_code
      </h3>
      <Button
        onClick={[MockFunction]}
      >
        onboarding.project.create
      </Button>
    </div>
  </div>
  <div
    className="modal-foot text-right"
  >
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      not_now
    </ResetButtonLink>
  </div>
</Modal>
`;

exports[`should display organization list if any 1`] = `
<Modal
  contentLabel="onboarding.header"
  onRequestClose={[MockFunction]}
  shouldCloseOnOverlayClick={false}
  size="medium"
>
  <div
    className="modal-head"
  >
    <h2>
      onboarding.header
    </h2>
    <p
      className="spacer-top"
    >
      onboarding.header.description
    </p>
  </div>
  <div
    className="modal-body text-center display-flex-row huge-spacer-top huge-spacer-bottom"
  >
    <div
      className="flex-1"
    >
      <OnboardingProjectIcon
        className="big-spacer-bottom"
      />
      <h3
        className="big-spacer-bottom"
      >
        onboarding.analyze_your_code
      </h3>
      <Button
        onClick={[MockFunction]}
      >
        onboarding.project.create
      </Button>
    </div>
    <div
      className="vertical-pipe-separator"
    >
      <div
        className="vertical-separator"
      />
    </div>
    <div
      className="flex-1"
    >
      <OnboardingTeamIcon
        className="big-spacer-bottom"
      />
      <h3
        className="big-spacer-bottom"
      >
        onboarding.browse_your_organizations
      </h3>
      <OrganizationsShortList
        onClick={[MockFunction]}
        organizations={
          Array [
            Object {
              "key": "a",
              "name": "Arthur",
            },
            Object {
              "key": "d",
              "name": "Daniel Inc",
            },
          ]
        }
      />
    </div>
  </div>
  <div
    className="modal-foot text-right"
  >
    <ResetButtonLink
      onClick={[MockFunction]}
    >
      not_now
    </ResetButtonLink>
  </div>
</Modal>
`;
